# codex-rolling-auth

./: .gitignore  CHANGELOG.md  LICENSE  PRODUCT.md  README.md  install.sh
.github/workflows/: ci.yml
lib/codex-auth/: claude-gpt.sh  core.sh  doctor.sh  help.sh  maintain.sh  output.sh  patch.sh  profiles.sh  render.sh  rolling-auth-v2.patch  run.sh  selector.sh  usage.sh
scripts/: capture_tui.py  generate-assets.mjs
tests/: run.sh
tui/: README.md  pyproject.toml
tui/src/codex_auth_tui/: __init__.py  __main__.py  backend.py  cli.py  engine.py  models.py  paths.py  settings.py
tui/src/codex_auth_tui/tui/: __init__.py  app.py  autoview.py  codex_auth_tui.tcss  dashboard.py  data.py  modals.py  theme.py  widgets.py
tui/tests/: conftest.py  test_backend.py  test_engine.py  test_policy.py  test_tui.py
