[project]
name = "codex-auth-tui"
version = "0.2.0"
description = "Textual monitor and auto-switch view for codex-rolling-auth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.8,<9",
]
license = {text = "MIT"}

[project.scripts]
codex-auth-tui = "codex_auth_tui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_auth_tui"]

[dependency-groups]
dev = [
    "pillow>=10,<13",
    "playwright==1.59.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
